--- a/02/solution/index.html
+++ b/02/solution/index.html
@@ -2,20 +2,19 @@
 <head>
   <title>JS Atomic - DOM - 02</title>
   <script type="text/javascript" src="global.js"></script>
+
 </head>
 <body>
 
-  <div id="show_me">
+  <div id="show_me" style="display:block">
     This should stay even after you click the link at the bottom.
   </div>
 
-  <div id="hide_me">
+  <div id="hide_me" style="display:block">
     This should disappear/reappear when you click the link at the bottom.
   </div>
 
   <button id="button">Hide/Show text</button>
-  <!-- THIS IS WEIRD TO ME ; not working-->
-
 
   <h1>JS Atomic - DOM - 02 Questions</h1>
   <!-- Answer the questions above here -->
