fixes verbage in html.

--- a/03/solution/index.html
+++ b/03/solution/index.html
@@ -9,11 +9,11 @@
 <body>
 
   <div class="show_me" style="display:block">
-    I have the class "show_me", and will stick around even after you click the link at the bottom.
+    I have the class "show_me", and will stick around even after you click the button at the bottom.
   </div>
 
   <div class="hide_me" style="display:block">
-    I have the class "hide_me"; I should disappear/reappear when you click the link at the bottom.
+    I have the class "hide_me"; I should disappear/reappear when you click the button at the bottom.
   </div>
 
   <div class="hide_me" style="display:block">
